--- a/src/app/components/Character Card Container/character-card-container.css
+++ b/src/app/components/Character Card Container/character-card-container.css
@@ -2,4 +2,20 @@
   background-color: #252525;
   display: flex;
   flex-wrap: wrap;
+  width: 60%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 100vh;
+}
+.character-card-container::-webkit-scrollbar {
+  width: 8px; /* Ancho de la barra de desplazamiento */
+}
+
+.character-card-container::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color de la barra de desplazamiento */
+  border-radius: 4px; /* Bordes redondeados */
+}
+
+.character-card-container::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Color de la barra al pasar el mouse */
 }
