--- a/src/app/components/Character Card Container/character-card-container.css
+++ b/src/app/components/Character Card Container/character-card-container.css
@@ -9,15 +9,19 @@
   height: 100vh;
   padding-top: 20px;
 }
-.character-card-container::-webkit-scrollbar {
-  width: 8px; /* Ancho de la barra de desplazamiento */
+
+/* laptop version */
+@media (max-width: 1450px) {
+  .character-card-container {
+    width: 70%;
+    padding-top: 10px;
+  }
 }
 
-.character-card-container::-webkit-scrollbar-thumb {
-  background-color: #888; /* Color de la barra de desplazamiento */
-  border-radius: 4px; /* Bordes redondeados */
-}
-
-.character-card-container::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Color de la barra al pasar el mouse */
+/* tablet and mobile version */
+@media (max-width: 770px) {
+  .character-card-container {
+    width: 100%;
+    height: 80vh;
+  }
 }
