--- a/src/app/components/Character Card/character-card.css
+++ b/src/app/components/Character Card/character-card.css
@@ -67,16 +67,62 @@
 .image-filter-selected {
   background-color: rgba(37, 37, 37, 0.4);
   width: 100%;
-  height: 100%; 
+  height: 100%;
   position: absolute;
-  top: 0; 
-  left: 0; 
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 10;
+  border-radius: 5px;
 }
 .number-selected-character {
   color: #fff;
   font-size: 5em;
+}
+
+/* laptop version */
+@media (max-width: 1050px) {
+  .card-character {
+    width: 200px;
+    height: 310px;
+    margin: 5px;
+  }
+  .character-image,
+  .image-character-box {
+    width: 180px;
+    height: 190px;
+  }
+  .character-text-box {
+    height: 100px;
+  }
+  .card-character h3 {
+    font-size: 1.1em;
+    text-align: center;
+    width: auto;
+  }
+}
+
+
+/* tablet and mobile version */
+@media (max-width: 770px)  {
+  .card-character {
+    width: 250px;
+    height: 390px;
+    margin: 5px;
+  }
+  .character-image,
+  .image-character-box {
+    width: 230px;
+    height: 250px;
+  }
+  .character-text-box {
+    height: 130px;
+  }
+  .card-character h3 {
+    font-size: 1.1em;
+    text-align: center;
+    width: auto;
+  }
 }
