--- a/src/app/components/Episode Table/episode-table.css
+++ b/src/app/components/Episode Table/episode-table.css
@@ -1,5 +1,5 @@
 .episode-table {
-  height: 200px;
+  height: 250px;
 }
 
 .episode-item-box {
@@ -16,24 +16,27 @@
   margin: 10px 20px;
 }
 
-.episode-item-box::-webkit-scrollbar {
-  width: 8px; /* Ancho de la barra de desplazamiento */
-}
-
-.episode-item-box::-webkit-scrollbar-thumb {
-  background-color: #888; /* Color de la barra de desplazamiento */
-  border-radius: 4px; /* Bordes redondeados */
-}
-
-.episode-item-box::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Color de la barra al pasar el mouse */
-}
-
-
-.episode-table  h4 {
+.episode-table h4 {
   text-align: center;
   font-size: 1.2em;
   font-weight: 400;
   text-transform: uppercase;
   margin-top: 50px;
+}
+
+/* laptop version and mobile */
+@media (max-width: 1050px) {
+  .episode-table h4 {
+    font-size: 1em;
+  }
+  .episode-table h2 {
+    font-size: 1.2em;
+  }
+}
+
+/* tablet and mobile version */
+@media (max-width: 770px) {
+  .episode-item-box {
+    height: 100px;
+  }
 }
